# designer-mod

./: .gitignore  CMakeLists.txt
pixmaps/: Makefile  Makefile.in
po/: Makefile  Makefile.in  de.gmo  fr.gmo  hu.gmo  ro.gmo
qcamod/: CMakeLists.txt  app.py  config.py  gen_qca_and_sim_tool.c  gen_truth_tool.cpp  generate_logic_files.py  generate_qca_and_sim_from_structure.c  generate_qca_and_sim_from_structure.i  generate_simulation_files.py  generate_truth_from_sim.cpp  generate_truth_from_sim.h  grammar.hpp  main.py  main_old.py  models.py  qcamod.c  sim_manager.py  sim_parser.hpp
qcamod/benchmark/: majority_gate_1.txt  majority_gate_2.txt
qcamod/imp/: CMakeLists.txt  generate_qca_and_sim_from_structure.c  generate_qca_and_sim_from_structure.h  generate_qca_and_sim_from_structure.i  generate_qca_and_sim_from_structure_imp.c  generate_qca_and_sim_from_structure_imp.h  generate_qca_and_sim_from_structure_imp.i  generate_truth_from_sim.cpp  generate_truth_from_sim.i  generate_truth_from_sim_imp.cpp  generate_truth_from_sim_imp.i  grammar.hpp
qcamod/tools/: sim_structure.c  sim_structure.h
src/: CMakeLists.txt  main_batch_sim.c  main_pf.c  sim_manager.py
src/actions/: select.c
src/objects/: QCADClockCombo.c  QCADSubstrate.c  QCADTreeViewContainer.c
src/qcamod/: CMakeLists.txt  generate_logic_files.py  generate_simulation_files.py  qcamod.c  sim_manager.py  sim_parser.cpp
